# CMakeStudy

./: .gitignore  settings.gradle
StudyApp/: CMakeLists.txt  build.gradle
StudyApp/src/androidTest/java/com/leean/studyapp/: ExampleInstrumentedTest.kt
StudyApp/src/main/: AndroidManifest.xml
StudyApp/src/main/cpp/: CMakeLists.txt  Message.cpp  Message.h  compute-areas.cpp  hello-world.cpp  main.cpp  main.h  set_compiler_flag.cmake
StudyApp/src/main/cpp/src/: CMakeLists.txt
StudyApp/src/main/java/com/leean/studyapp/: MainActivity.kt
StudyApp/src/test/java/com/leean/studyapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
